--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      property="og:title"
+      content="世紀末機器人"
+    />
+    <meta
+      property="og:description"
+      content="輸出全靠吼的舊型焚燒機器人，誓言要在這末世廢土，將導致人類滅亡的新型機器人全數消滅"
+    />
+    <meta
+      property="og:image"
+      content="/game-ogi.png"
+    />
     <meta charset="UTF-8" />
     <link
       rel="icon"
